--- a/src/PlanIt/UserBundle/Resources/views/layout-login.html.twig
+++ b/src/PlanIt/UserBundle/Resources/views/layout-login.html.twig
@@ -2,21 +2,92 @@
 <html>
     <head>
         <meta charset="UTF-8" />
+        <link rel="stylesheet"  type="text/css" href="/css/accueil_inscription.css">
+        <link rel="stylesheet"  type="text/css" href="/css/bootstrap.min.css">
+        <link rel="icon" type="image/png" href="/images/accueil/favicons/favicon-192x192.png" sizes="192x192">
+        <link rel="icon" type="image/png" href="/images/accueil/favicons/favicon-160x160.png" sizes="160x160">
+        <link rel="icon" type="image/png" href="/images/accueil/favicons/favicon-96x96.png" sizes="96x96">
+        <link rel="icon" type="image/png" href="/images/accueil/favicons/favicon-16x16.png" sizes="16x16">
+        <link rel="icon" type="image/png" href="/images/accueil/favicons/favicon-32x32.png" sizes="32x32">
+        <title>Plan it</title>
     </head>
     <body>
+    <div class="container">   
+      <div class="row">
+        <section class="col-md-12" id="page1">
+          <div class="row">
+            <div class="col-sm-2 col-sm-offset-1"><img src="/images/accueil/logo.png" id="logo"></div>
+          </div>
+          <div class="row">
+            <div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3 col-xs-9 col-xs-offset-1 form" >
+           
+                {% for type, messages in app.session.flashbag.all() %}
+                {% for message in messages %}
+                    <div class="flash-{{ type }}">
+                        {{ message }}
+                    </div>
+                {% endfor %}
+                {% endfor %}
 
-        {% for type, messages in app.session.flashbag.all() %}
-            {% for message in messages %}
-                <div class="flash-{{ type }}">
-                    {{ message }}
+                <div>
+                    {% block fos_user_content %}
+                    {% endblock fos_user_content %}
                 </div>
-            {% endfor %}
-        {% endfor %}
 
-        <div>
-            {% block fos_user_content %}
-            {% endblock fos_user_content %}
-        </div>
+            </div>
+           
+          </div>   
+        </section> 
+        <section class="col-md-12" id="page2">
+          <h1>QU'EST-CE QUE C'EST ?</h1>
+           <div class="row">
+            <div class="col-md-4 col-md-offset-1">
+              <p>
+                Plan it est un outil qui facilite la création d’évènements, tels que les anniversaires, mariages, week-end d’intégration etc. Sa particularité est qu’il permet de regrouper toutes les étapes importantes dans l’organisation d’évènements. C’est-à-dire qu’il gère les invités et l’envoie d’invitations, il s’occupe également du budget, du lieu, du transport éventuel etc.
+                </br></br>
+                Cet outil vous permettra de mieux vous organiser, car tout est rassemblé au sein d’une seule et même application !
+              </p>
+           </div> 
+            <div class="col-md-2  col-md-offset-1 col_gauche_modules">
+              <img src="/images/accueil/module1.png" class="img_module" id="module1">
+              <img src="/images/accueil/module4.png" class="img_module" id="module2">
+            </div> 
+            <div class="col-md-2">
+              <img src="/images/accueil/module2.png" class="img_module" id="module3">
+              <img src="/images/accueil/module5.png" class="img_module" id="module4">
+            </div>
+            <div class="col-md-2 col_dte_modules">
+              <img src="/images/accueil/module3.png" class="img_module" id="module5">
+              <img src="/images/accueil/module6.png" class="img_module" id="module6">
+            </div>                    
+          </div>
+
+        </section>
+        <section class="col-md-12" id="page3">          
+          <h1>QUI SOMMES-NOUS ?</h1>
+          <div class="row">
+            <div class="col-md-2 col-md-offset-1 description_membre">              
+              <img src="/images/accueil/marina.png" class="img_membre">
+              <h2>MARINA AVATANEO</h2>
+              <p>Elle s’occupe de la partie graphique (création des maquettes, logo etc.)Mais aussi du développement front-end avec Alizée Camarasa</p>
+            </div>
+            <div class="col-md-2 col-md-offset-2 description_membre">              
+              <img src="/images/accueil/alizee.png" class="img_membre">
+              <h2>ALIZEE CAMARASA</h2>
+              <p>Elle travaille en parallèle avec Marina Avataneo sur le développement front-end mais également avec Marion Le Corre pour ce qui est du développement back-end.</p>
+            </div>
+            <div class="col-md-2 col-md-offset-2 description_membre">              
+              <img src="/images/accueil/marion.png" class="img_membre">
+              <h2>MARION </br> LE CORRE</h2>
+              <p>Elle s’occupe du développement back-end avec Alizée Camarasa. Ceci consiste notamment à la création de la base de données et toutes les interactions qu’il y aura avec sur le site.</p>
+            </div> 
+          </div>
+            <div class="row">              
+              <footer><p> Plan it - réalisé par Marina Avataneo, Alizée Camarasa et Marion Le Corre - 2014 ©</p></footer>
+            </div>
+        </section>
+      </div>
+    </div>
     </body>
 </html>
  {% block javascripts %}
