--- a/src/PlanIt/UserBundle/Resources/views/Page/register.html.twig
+++ b/src/PlanIt/UserBundle/Resources/views/Page/register.html.twig
@@ -1,12 +1,11 @@
 {% extends "PlanItUserBundle::layout-login.html.twig" %}
 {% block fos_user_content %}
-<a href="{{ path('PlanItUserBundle_login') }}">
-                    Connexion
-                </a>
+<h1>Inscrivez-vous</h1>
 <form action="{{ path('PlanItUserBundle_register') }}" {{ form_enctype(form) }} method="POST" class="fos_user_registration_register">
     {{ form_widget(form) }}
     <div>
-        <input type="submit" value="{{ 'registration.submit'|trans }}" />
+        <input type="submit" value="{{ 'form.registration.submit'|trans }}" />
     </div>
 </form>
+<a href="{{ path('PlanItUserBundle_login') }} " class="text_accueil"><h2>Vous avez déjà un compte ? </h2></a>
 {% endblock fos_user_content %}
