--- a/src/PlanIt/TodoBundle/Resources/public/css/general.scss
+++ b/src/PlanIt/TodoBundle/Resources/public/css/general.scss
@@ -10,6 +10,11 @@ $neutral: #d8d7d7;
           border-radius: $radius;
 }
 
+header {
+	.logout {
+		color : $color !important;
+	}
+}
 
 .modal-header {
 	color: $color;
