--- a/src/PlanIt/GuestsBundle/Resources/public/css/guests.scss
+++ b/src/PlanIt/GuestsBundle/Resources/public/css/guests.scss
@@ -174,6 +174,9 @@ header {
 				margin: 7px auto;
 				width: 14px;
 			}
+			form#payment .no_payment {
+				font-size:10px;
+			}
 			.confirmed .light, .payed .light {
 				background-color: #000;
 				height: 11px;
@@ -206,6 +209,9 @@ header {
 
 			.sent-1 .picto {
 				background-position-x : -54px;
+				&:hover {
+					cursor:default;
+				}
 			}
 			.delete .picto {
 				background-position-x : -106px;
