--- a/src/PlanIt/PlaceBundle/Resources/public/css/place.scss
+++ b/src/PlanIt/PlaceBundle/Resources/public/css/place.scss
@@ -37,6 +37,13 @@ input{
 	width:50px;
 }
 
+.empty_module {
+	text-align: center;
+  	margin-top: 50px;
+  	color: $color;
+  	font-size: 16px;
+}
+
 .img_place{
 	height: 215px;
 	margin-bottom: 20px;
