--- a/src/PlanIt/TransportationBundle/Resources/public/css/general.scss
+++ b/src/PlanIt/TransportationBundle/Resources/public/css/general.scss
@@ -11,6 +11,11 @@ $row-list: #f1f1f1;
           border-radius: $radius;
 }
 
+header {
+	.logout {
+		color : $color !important;
+	}
+}
 
 .modal-header {
 	color: $color;
