--- a/src/PlanIt/TransportationBundle/Resources/public/css/transportation.scss
+++ b/src/PlanIt/TransportationBundle/Resources/public/css/transportation.scss
@@ -20,6 +20,13 @@ header {
     position: relative;
 }
 
+.empty_module {
+	text-align: center;
+  	margin-top: 50px;
+  	color: $color;
+  	font-size: 16px;
+}
+
 #infos{
 	p{
 		margin-bottom:15px;
