--- a/src/PlanIt/TransportationBundle/Resources/views/Page/index.html.twig
+++ b/src/PlanIt/TransportationBundle/Resources/views/Page/index.html.twig
@@ -27,56 +27,61 @@
 		<div class="row">
 	        <div class="col-md-3 bt_place"><button data-toggle="modal" data-target=".addTransportationModal" class="col-md-3">{{'add_transportation'|trans}}</button></div>
 	    </div>
-	    <div class="row list" id="list">
-			{% for transportation in module.transportations%}
-			<div id="transportation-{{transportation.id}}">
-				<div class="div-checkbox">
-					<input type="checkbox" class="check" id="check-{{transportation.id}}" onClick="choseTransportation({{transportation.id}})" {% if transportation.state == 1 %} checked {% endif %}>
-				</div>
-				<div id="head_list" class="head-list accordion-head {% if transportation.state == 1 %} checked {% else %} nochecked {% endif %}">	
-					<div class="name"><input type="text" id="name-transportation-{{transportation.id}}" onblur="updateTransportation({{transportation.id}})" value="{{transportation.name}}"></div>
-				    <div class="price"><input type="text" id="price-transportation-{{transportation.id}}" onblur="updateTransportation({{transportation.id}})" value="{{transportation.price}}">€</div>
-				    <button onclick="showModalDeleteTransportation({{transportation.id}}, '{{transportation.name}}')">X</button>
-				</div>
-				<div class="accordion-body">
-				    <div class="labels row">
-				    	<div class="col-lg-3 col-md-12 col-sm-12 img_place">
-				    		{% if transportation.image != null %}
-				    			<img src="/images/transportation/transportations_pictures/{{transportation.image}}" width="100%"/>
-				    		{% else %}
-				    			<img src="/images/no-image.jpg" width="100%"/>
-				    		{% endif %}
-								<div class="bt_place">
-				                    <button data-toggle="modal" data-target=".updateImageModal" data-id="{{transportation.id}}">{{'update_image'|trans}}</button> 
-				                </div>
-				        </div>
-				    	<div class="col-lg-4 col-md-6 col-sm-12" id="infos">
-				        	<p><span class="label_descr">{{'capacity'|trans}}</span> : <input type="text" id="capacity-transportation-{{transportation.id}}" onblur="updateTransportation({{transportation.id}})" value="{{transportation.capacity}}"></p>
-				        	<p><span class="label_descr">{{'tel'|trans}}</span> : <input type="text" id="tel-transportation-{{transportation.id}}" onblur="updateTransportation({{transportation.id}})" value="{{transportation.tel}}"></p>
-				        	<p><span class="label_descr">{{'website'|trans}}</span> : <input type="text" id="website-transportation-{{transportation.id}}" onblur="updateTransportation({{transportation.id}})" value="{{transportation.website}}"> </p>
-				        	<p><span class="label_descr">{{'remark'|trans}}</span> : <input type="text" id="remark-transportation-{{transportation.id}}" onblur="updateTransportation({{transportation.id}})" value="{{transportation.remark}}"> </p>
-				        	<p><span class="label_descr">{{'state'|trans}}</span> : 
-				        		<select id="state-transportation-{{transportation.id}}" onchange="updateTransportation({{transportation.id}})">
-				        			<option value="0" {% if transportation.state == 0 %} selected {% endif %}>{{'refused'|trans}}</option>
-				        			<option value="2" {% if transportation.state == 2 %} selected {% endif %}>{{'contacted'|trans}}</option>
-				        			<option value="3" {% if transportation.state == 3 %} selected {% endif %}>{{'tocontact'|trans}}</option>
-				        			<option value="1" {% if transportation.state == 1 %} selected {% endif %}>{{'accepted'|trans}}</option>
-				        		</select>
-				        	</p>
-				        	<p><span class="label_descr">{{'contract'|trans}}</span> : <a target="_blank" href="/files/transportation/contracts/{{transportation.contract}}">{{transportation.contract}} </a>
-				                <div class="bt_place">
-				                    <button data-toggle="modal" data-target=".updateContractModal" data-id="{{transportation.id}}">{{'update_contract'|trans}}</button> 
-				                </div>
-				        	</p>
-				    	</div>
-				    	<div class="col-lg-5 col-md-6 col-sm-12" id="map_canvas_{{transportation.id}}">
-				    	</div>
 
-				    </div>
+	    {% if module.transportations is empty %}
+			<p class="empty_module">{{'empty_module'|trans}}</p>
+		{% else %}
+		    <div class="row list" id="list">
+				{% for transportation in module.transportations%}
+				<div id="transportation-{{transportation.id}}">
+					<div class="div-checkbox">
+						<input type="checkbox" class="check" id="check-{{transportation.id}}" onClick="choseTransportation({{transportation.id}})" {% if transportation.state == 1 %} checked {% endif %}>
+					</div>
+					<div id="head_list" class="head-list accordion-head {% if transportation.state == 1 %} checked {% else %} nochecked {% endif %}">	
+						<div class="name"><input type="text" id="name-transportation-{{transportation.id}}" onblur="updateTransportation({{transportation.id}})" value="{{transportation.name}}"></div>
+					    <div class="price"><input type="text" id="price-transportation-{{transportation.id}}" onblur="updateTransportation({{transportation.id}})" value="{{transportation.price}}">€</div>
+					    <button onclick="showModalDeleteTransportation({{transportation.id}}, '{{transportation.name}}')">X</button>
+					</div>
+					<div class="accordion-body">
+					    <div class="labels row">
+					    	<div class="col-lg-3 col-md-12 col-sm-12 img_place">
+					    		{% if transportation.image != null %}
+					    			<img src="/images/transportation/transportations_pictures/{{transportation.image}}" width="100%"/>
+					    		{% else %}
+					    			<img src="/images/no-image.jpg" width="100%"/>
+					    		{% endif %}
+									<div class="bt_place">
+					                    <button data-toggle="modal" data-target=".updateImageModal" data-id="{{transportation.id}}">{{'update_image'|trans}}</button> 
+					                </div>
+					        </div>
+					    	<div class="col-lg-4 col-md-6 col-sm-12" id="infos">
+					        	<p><span class="label_descr">{{'capacity'|trans}}</span> : <input type="text" id="capacity-transportation-{{transportation.id}}" onblur="updateTransportation({{transportation.id}})" value="{{transportation.capacity}}"></p>
+					        	<p><span class="label_descr">{{'tel'|trans}}</span> : <input type="text" id="tel-transportation-{{transportation.id}}" onblur="updateTransportation({{transportation.id}})" value="{{transportation.tel}}"></p>
+					        	<p><span class="label_descr">{{'website'|trans}}</span> : <input type="text" id="website-transportation-{{transportation.id}}" onblur="updateTransportation({{transportation.id}})" value="{{transportation.website}}"> </p>
+					        	<p><span class="label_descr">{{'remark'|trans}}</span> : <input type="text" id="remark-transportation-{{transportation.id}}" onblur="updateTransportation({{transportation.id}})" value="{{transportation.remark}}"> </p>
+					        	<p><span class="label_descr">{{'state'|trans}}</span> : 
+					        		<select id="state-transportation-{{transportation.id}}" onchange="updateTransportation({{transportation.id}})">
+					        			<option value="0" {% if transportation.state == 0 %} selected {% endif %}>{{'refused'|trans}}</option>
+					        			<option value="2" {% if transportation.state == 2 %} selected {% endif %}>{{'contacted'|trans}}</option>
+					        			<option value="3" {% if transportation.state == 3 %} selected {% endif %}>{{'tocontact'|trans}}</option>
+					        			<option value="1" {% if transportation.state == 1 %} selected {% endif %}>{{'accepted'|trans}}</option>
+					        		</select>
+					        	</p>
+					        	<p><span class="label_descr">{{'contract'|trans}}</span> : <a target="_blank" href="/files/transportation/contracts/{{transportation.contract}}">{{transportation.contract}} </a>
+					                <div class="bt_place">
+					                    <button data-toggle="modal" data-target=".updateContractModal" data-id="{{transportation.id}}">{{'update_contract'|trans}}</button> 
+					                </div>
+					        	</p>
+					    	</div>
+					    	<div class="col-lg-5 col-md-6 col-sm-12" id="map_canvas_{{transportation.id}}">
+					    	</div>
+
+					    </div>
+					</div>
 				</div>
+				{% endfor %}
 			</div>
-			{% endfor %}
-		</div>
+		{% endif %}
 		<div class="modal fade deleteTransportationModal validate" id="basicModal" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
 		    <div class="modal-dialog">
 		        <div class="modal-content">
