Menu qui reste ouvert toussa

--- a/src/PlanIt/UserBundle/Resources/public/css/sidebar.scss
+++ b/src/PlanIt/UserBundle/Resources/public/css/sidebar.scss
@@ -91,6 +91,9 @@
 			&.last {
 				@include box-shadow(0,0,0,0,#1c1c1c);
 			}
+			.module_active{
+				  color: #61c0a5;
+			}
 		}
 	}
 	ul.modules li {
