--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -54,11 +54,11 @@
                             <li class="events"><a href="{{ path('PlanItUserBundle_homepage', { 'id': user.id }) }}">{{'events'|trans}}</a></li>
                             <ul class="events" id="accordion">
                                 {% for event in user.events %}
-                                    <li class="active event {%if event_id is defined%}{%if event_id ==event.id%} open{%endif%}{%endif%}">{{event.name |truncate(20)}}</li>
-                                    <ul class="modules">
-                                        <li><a href="{{ path('PlanItEventBundle_event', { 'id': event.id }) }}">{{'general'|trans}}</a></li>
+                                    <li class="active event" id="li-{{event.id}}">{{event.name |truncate(20)}}</li>
+                                    <ul class="modules" id="modules-{{event.id}}" >
+                                        <li><a class="{% if event_id is defined and module_id is not defined%}module_active{% endif %}" href="{{ path('PlanItEventBundle_event', { 'id': event.id }) }}">{{'general'|trans}}</a></li>
                                         {% for module in event.modules %}
-                                            <li><a href="{{ path('PlanItModuleBundle_module', { 'event_id': event.id, 'module_id':module.id }) }}">{{module.name|trans}}</a></li>
+                                            <li><a class="{% if module_id is defined %}{% if module.id ==  module_id %}module_active{% endif %}{% endif %}" href="{{ path('PlanItModuleBundle_module', { 'event_id': event.id, 'module_id':module.id }) }}">{{module.name|trans}}</a></li>
                                         {% endfor %}
                                     </ul>
                                 {% endfor %}
@@ -96,8 +96,11 @@
             %}
             <script type="text/javascript" src="{{ asset_url }}"></script>
             {% endjavascripts %}
-
-            <script>accordeon();</script>
+            {% if event_id is defined %}
+                <script>accordeon({{event_id}});</script>
+            {% else %}
+                <script>accordeon(0);</script>
+            {% endif %}
         {% endblock %}
     </body>
 </html>
