--- a/src/PlanIt/GuestsBundle/Resources/views/Page/index.html.twig
+++ b/src/PlanIt/GuestsBundle/Resources/views/Page/index.html.twig
@@ -93,11 +93,11 @@
                                 </div>
                                 
                                 {% if module.payable %}
-                                <div id="price-{{type_guest.id}}" class="price col-md-2 col-sm-2 col-md-offset-2 col-sm-offset-0 typeprice">
+                                <div id="price-{{type_guest.id}}" class="price col-md-1 col-sm-2 col-md-offset-4 col-sm-offset-0 typeprice">
                                 <span>{{type_guest.price}}€/pers</span>
                                 </div>
                                 {% endif %}
-                                <div class="right pull-right col-md-2 col-sm-3" >
+                                <div class="right pull-right col-md-1 col-sm-3 modify-delete-type" >
                                     <div class="modify_type" onclick="showModalUpdateType({{type_guest.id}})"></div>
                                     <div class="delete_type" onclick="showModalDeleteType({{type_guest.id}},'{{type_guest.label}}')"></div>                                    
 
@@ -166,9 +166,9 @@
                                             {% endif %}
                                             {% if module.moduletype == false %}
                                                 <div {% if not guest.sent %} onclick="sendMail({{guest.id}})" {% endif %} id="sent-{{guest.id}}" data-type="{{guest.sent}}" class="send sent-{{guest.sent}} col-md-1 col-sm-1 col-xs-1" data-placement="top" data-original-title="Vous avez déjà envoyé cette invitation"><div class="picto"></div></div>
-                                                <div class="delete col-md-1 col-sm-1 col-xs-1"><div class="picto" data-toggle="modal" data-target=".deleteGuestModal" data-type="{{guest.sent}}" data-id="{{guest.id}}" data-name="{{guest.firstname}} {{guest.lastname}}"></div></div>
+                                                <div class="delete col-md-1 col-sm-1 col-xs-1 pull-right"><div class="picto" data-toggle="modal" data-target=".deleteGuestModal" data-type="{{guest.sent}}" data-id="{{guest.id}}" data-name="{{guest.firstname}} {{guest.lastname}}"></div></div>
                                             {% elseif module.moduletype == true %}
-                                                <div class="delete col-md-2 col-sm-2 col-xs-2 pull-right"><div class="picto" data-toggle="modal" data-target=".deleteGuestModal" data-id="{{guest.id}}" data-name="{{guest.firstname}} {{guest.lastname}}"></div></div>
+                                                <div class="delete col-md-1 col-sm-1 col-xs-1 pull-right"><div class="picto" data-toggle="modal" data-target=".deleteGuestModal" data-id="{{guest.id}}" data-name="{{guest.firstname}} {{guest.lastname}}"></div></div>
                                             {% endif %}
                                         </div>
                                 {% endif %}
