--- a/src/PlanIt/UserBundle/Resources/views/layout-login.html.twig
+++ b/src/PlanIt/UserBundle/Resources/views/layout-login.html.twig
@@ -19,7 +19,7 @@
             <div class="col-sm-2 col-sm-offset-1"><img src="/images/accueil/logo.png" id="logo"></div>
           </div>
           <div class="row">
-            <div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3 col-xs-9 col-xs-offset-1 form" >
+            <div class="col-md-3 col-sm-5 col-xs-8 form" >
            
                 {% for type, messages in app.session.flashbag.all() %}
                 {% for message in messages %}
