--- a/web/css/accueil_inscription.css
+++ b/web/css/accueil_inscription.css
@@ -82,6 +82,7 @@ input[type="file"]{
 
 input[type="submit"], input[type="text"], input[type="password"], input[type="email"]{
   margin-top:10px;
+  padding-left:10px;
   /*border-radius: 3px;*/
 }
  
@@ -208,6 +209,12 @@ input[type="submit"], input[type="text"], input[type="password"], input[type="em
 
 }
 
+@media (min-width: 299px) and (max-width: 768px){  
+  .form{
+    margin-left: 15%;
+  }
+}
+
 @media (min-width: 768px) and (max-width: 850px){
 
   #texte_accueil{
@@ -225,6 +232,13 @@ input[type="submit"], input[type="text"], input[type="password"], input[type="em
 
   .reponse_envoie_mail p{  
     font-size: 12px;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 992px){
+
+  .form{
+    margin-left: 30%;
   }
 }
 
@@ -278,6 +292,10 @@ input[type="submit"], input[type="text"], input[type="password"], input[type="em
 
   #texte_accueil span{
     font-size: 50px;
+  }
+
+  .form{
+    margin-left:37%;
   }
 
 }
