--- a/src/PlanIt/TransportationBundle/Resources/views/Page/update-module-form.html.twig
+++ b/src/PlanIt/TransportationBundle/Resources/views/Page/update-module-form.html.twig
@@ -7,7 +7,7 @@
                 <h4 class="modal-title" id="myModalLabel">{{'update_module'|trans}}</h4>
                 </div>
                 <div class="modal-body">
-                    <form id="form-post-guest" action="/app_dev.php/api/placemodules/{{module.id}}/updates" method="post" {{ form_enctype(form) }} class="blogger">
+                    <form id="form-post-guest" action="/app_dev.php/api/transportationmodules/{{module.id}}/updates" method="post" {{ form_enctype(form) }} class="blogger">
                         {{ form_widget(form) }}
 
 				    <p>
