--- a/src/PlanIt/EventBundle/Resources/views/Page/event.html.twig
+++ b/src/PlanIt/EventBundle/Resources/views/Page/event.html.twig
@@ -136,6 +136,7 @@
 	      <script language="javascript" src="{{ asset_url }}"></script>
 	{% endjavascripts %}
 	<script>events();</script>
+	<script>getInfos({{event_id}});</script>
 	<script>
 		$('.benef').tooltip();
 		 if( parseInt($("#balance p span").text()) > 0 ){
