bugfix de la page todo et place

--- a/src/PlanIt/TodoBundle/Resources/public/css/todo.scss
+++ b/src/PlanIt/TodoBundle/Resources/public/css/todo.scss
@@ -73,7 +73,8 @@ ul{
 	margin-top: 7px;
 }
 
-.empty_listtask {
+.empty_listtask,
+.empty_module {
 	text-align: center;
   	margin-top: 50px;
   	color: $color;
