--- a/src/PlanIt/TodoBundle/Resources/views/Page/index.html.twig
+++ b/src/PlanIt/TodoBundle/Resources/views/Page/index.html.twig
@@ -2,13 +2,13 @@
 
 {% block content %}
 <div class="container">
-	<div class="row" id="title">
+    <div class="row" id="title">
         <div class="col-md-12" > <h1>TODO</h1> </div>
     </div>
 
-	<div class="row" id="separator">
-		<div class="col-md-12"> </div>
-	</div>
+    <div class="row" id="separator">
+        <div class="col-md-12"> </div>
+    </div>
     <div class="modal fade modal-ok" id="okModal" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -17,7 +17,7 @@
             </div>
         </div>
     </div>
-	<div class="row buttons">
+    <div class="row buttons">
         <div class="col-md-3 bt_todo"><button data-toggle="modal" data-target=".addListModal">{{'add_tasklist'|trans}}</button></div>
         <div class="col-md-3 bt_todo"><a href="{{ path('PlanItTodoBundle_pdf', { 'module_id': module.id }) }}"><button>{{'print_task'|trans}}</button></a></div>
 
@@ -27,67 +27,68 @@
      {{ render(controller('PlanItTodoBundle:Item:formlist', { 'module_id' : module.id } ))}}
      {{ render(controller('PlanItTodoBundle:Item:form', { 'module_id' : module.id } ))}}
 
-    {% for list in module.lists %}
-        
-    <div class="type-list" id="blocklist-{{list.id}}">
-    	<div class="accordion-head">
-    		<input type="text" class="updatable-input" id="list-{{list.id}}" onblur="updateList({{list.id}})" value="{{list.name}}">
-	    	<div class="pull-right" >
-                <div class="delete-type" onclick="showModalDeleteList({{list.id}},'{{list.name}}')"></div>  
+    {% if module.lists is empty %}
+        <p class="empty_module">{{'empty_list'|trans}}</p>
+    {% else %}
+        {% for list in module.lists %}
+            <div class="block-jauge">
+                {% for item in list.items %}
+                    <span class="elmt-jauge {% if item.checked %} jauge-checked {% endif %}"> </span>
+                {% endfor %}
             </div>
                 
             <div class="type-list" id="blocklist-{{list.id}}">
-            	<div class="accordion-head">
-            		<input type="text" class="updatable-input" id="list-{{list.id}}" onblur="updateList({{list.id}})" value="{{list.name}}">
-        	    	<div class="pull-right" >
+                <div class="accordion-head">
+                    <input type="text" class="updatable-input" id="list-{{list.id}}" onblur="updateList({{list.id}})" value="{{list.name}}">
+                    <div class="pull-right" >
                         <div class="delete-type" onclick="showModalDeleteList({{list.id}},'{{list.name}}')"></div>  
 
                     </div>
                 </div>
                 <div class="accordion-body">
-                	<ul class="todo-list">
-            		    {% for item in list.items %}
-            				{% if not item.checked %}
-            					<li id="blockitem-{{item.id}}">						
-            							<div class="todo">
-            								<input type="checkbox" id="checkbox-{{item.id}}" name="todo1" onClick="changeChecked({{item.id}}, '{{item.content}}')">
-            								<input type="text" class="updatable-input" id="item-{{item.id}}" onblur="updateItem({{item.id}})" value="{{item.content}}">
-            								<div class="pull-right" >
+                    <ul class="todo-list">
+                        {% for item in list.items %}
+                            {% if not item.checked %}
+                                <li id="blockitem-{{item.id}}">                     
+                                        <div class="todo">
+                                            <input type="checkbox" id="checkbox-{{item.id}}" name="todo1" onClick="changeChecked({{item.id}}, '{{item.content}}')">
+                                            <input type="text" class="updatable-input" id="item-{{item.id}}" onblur="updateItem({{item.id}})" value="{{item.content}}">
+                                            <div class="pull-right" >
                                                 <div class="delete" data-toggle="modal" data-target=".deleteItemModal" data-content="{{item.content}}" data-id="{{item.id}}"></div>  
                                             </div>
-            							</div>							
-            					</li>
-            				{% endif %}
-            			{% endfor %}
+                                        </div>                          
+                                </li>
+                            {% endif %}
+                        {% endfor %}
 
                         {% if list.items is empty %}
                             <p class="empty_listtask">{{'empty_module'|trans}}</p>
                         {% else %}
-                			{% for item in list.items %}
-                				{% if item.checked %} 
-                					<li id="blockitem-{{item.id}}">
-            						<div class="todo checked">
-            							<input type="checkbox" id="checkbox-{{item.id}}" checked name="todo1" onClick="changeChecked({{item.id}},'{{item.content}}')"> 
+                            {% for item in list.items %}
+                                {% if item.checked %} 
+                                    <li id="blockitem-{{item.id}}">
+                                    <div class="todo checked">
+                                        <input type="checkbox" id="checkbox-{{item.id}}" checked name="todo1" onClick="changeChecked({{item.id}},'{{item.content}}')"> 
                                         <input type="text" class="updatable-input" id="item-{{item.id}}" onblur="updateItem({{item.id}})" value="{{item.content}}">
                                         <div class="pull-right" >
                                             <div class="delete_checked" data-toggle="modal" data-target=".deleteItemModal" data-content="{{item.content}}" data-id="{{item.id}}"></div>  
                                         </div>
-            						</div>	
-                					</li>
-                				{% endif %}
-                			{% endfor %}
+                                    </div>  
+                                    </li>
+                                {% endif %}
+                            {% endfor %}
                         {% endif %}
                             <!-- <p>Vous n'avez pas encore ajouté de tâche</p> -->               
-            		</ul>
+                    </ul>
                     <div class="row">
-            	       	<div class="col-md-3 col-sm-4 col-xs-6 bt_todo pull-right add-item"><button data-toggle="modal" data-list="{{list.id}}" data-target=".addItemModal">{{'add_task'|trans}}</button></div>
+                        <div class="col-md-3 col-sm-4 col-xs-6 bt_todo pull-right add-item"><button data-toggle="modal" data-list="{{list.id}}" data-target=".addItemModal">{{'add_task'|trans}}</button></div>
                     </div>
                 </div><!--accordeon body-->
-        	</div>
-    	{% endfor %}
+            </div>
+        {% endfor %}
     {% endif %}
 
-	<div class="modal fade deleteItemModal validate" id="basicModal" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
+    <div class="modal fade deleteItemModal validate" id="basicModal" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -124,5 +125,5 @@
 
 {% block javascripts %}
     {{ parent() }} <!-- pour ne pas effacer les autres feuilles de style -->
-	<script>todo();</script>
+    <script>todo();</script>
 {% endblock %}
