--- a/src/PlanIt/PlaceBundle/Resources/public/css/place.scss
+++ b/src/PlanIt/PlaceBundle/Resources/public/css/place.scss
@@ -19,7 +19,12 @@ input{
 	}
 }
 
-
+#placecontract_form{
+	background-color: lighten($neutral,10%);
+	@include border-radius(3px);
+	cursor: pointer;
+	padding: 2px 5px;
+}
 
 .bt_place{
 	button{
