compteur nombre d'inscrits

--- a/src/PlanIt/GuestsBundle/Resources/public/css/general.scss
+++ b/src/PlanIt/GuestsBundle/Resources/public/css/general.scss
@@ -6,6 +6,7 @@ $wait : #ff9966;
 $head-list: #d8d7d7;
 $row-list: #f1f1f1;
 $header: #f1f1f1;
+$neutral: #dfdede;
 
 
 @mixin border-radius($radius) {
