--- a/src/PlanIt/PlaceBundle/Resources/views/Page/index.html.twig
+++ b/src/PlanIt/PlaceBundle/Resources/views/Page/index.html.twig
@@ -58,13 +58,13 @@
 				                </div>
 				        </div>
 				    	<div class="col-lg-4 col-md-6 col-sm-12" id="infos">
-				        	<p><span class="label_descr">{{'address'|trans}}</span> <input type="text" id="address-place-{{place.id}}" onblur="updatePlace({{place.id}})" value="{{place.address}}"></p>
-				        	<p><span class="label_descr">{{'capacity'|trans}}</span> <input type="text" class="short_input" id="capacity-place-{{place.id}}" onblur="updatePlace({{place.id}})" value="{{place.capacity}}"></p>
+				        	<p class="address"><span class="label_descr">{{'address'|trans}}</span> <textarea id="address-place-{{place.id}}" onblur="updatePlace({{place.id}})" placeholder="{{'address_placeholder'|trans}}">{{place.address}}</textarea></p>
+				        	<p><span class="label_descr">{{'capacity'|trans}}</span> <input type="text" class="short_input" id="capacity-place-{{place.id}}" onblur="updatePlace({{place.id}})" value="{{place.capacity}}">personnes</p>
 				        	<p><span class="label_descr">{{'distance'|trans}}</span> <input type="text" class="short_input" id="distance-place-{{place.id}}" onblur="updatePlace({{place.id}})" value="{{place.distance}}">km</p>
-				        	<p><span class="label_descr">{{'tel'|trans}}</span> <input type="text" id="tel-place-{{place.id}}" onblur="updatePlace({{place.id}})" value="{{place.tel}}"></p>
-				        	<p><span class="label_descr">{{'website'|trans}}</span> <input type="text" id="website-place-{{place.id}}" onblur="updatePlace({{place.id}})" value="{{place.website}}"> </p>
-				        	<p><span class="label_descr">{{'remark'|trans}}</span> <input type="text" id="remark-place-{{place.id}}" onblur="updatePlace({{place.id}})" value="{{place.remark}}"> </p>
-				        	<p id="p-state-place-{{place.id}}"><span class="label_descr">{{'state'|trans}}</span>
+				        	<p><span class="label_descr">{{'tel'|trans}}</span> <input type="text" id="tel-place-{{place.id}}" onblur="updatePlace({{place.id}})" value="{{place.tel}}" placeholder="ex: 06 78 56 43 44"></p>
+				        	<p><span class="label_descr">{{'website'|trans}}</span> <input type="text" id="website-place-{{place.id}}" onblur="updatePlace({{place.id}})" value="{{place.website}}" placeholder= "ex: www.placetobe.com"> </p>
+				        	{# <p><span class="label_descr">{{'remark'|trans}}</span><textarea id="remark-place-{{place.id}}" onblur="updatePlace({{place.id}})" placeholder="{{'remark_placeholder'|trans}}">{{place.remark}}</textarea></p> #}
+				        	<p id="p-state-place-{{place.id}}" class="state-infos"><span class="label_descr">{{'state'|trans}}</span>
 				        		{% if place.state == 1 %}
 				        			<span class="accepted"> {{'accepted'|trans}} </span>
 				        		{% else %}
@@ -85,7 +85,7 @@
 					                    <button data-toggle="modal" id="modify_contract" data-target=".updateContractModal" data-id="{{place.id}}">{{'update_contract'|trans}}</button> 
 					                </div>
 				        		{% else %}
-				        			<span>Aucun contrat</span>
+				        			<span> Aucun contrat</span>
 				        			<div class="bt_place">
 					                    <button data-toggle="modal" id="modify_contract" data-target=".updateContractModal" data-id="{{place.id}}">{{'add_contract'|trans}}</button> 
 					                </div>
@@ -96,14 +96,14 @@
 				    	</div>
 				    	<div class="col-lg-5 col-md-6 col-sm-12 map_canvas" id="map_canvas_{{place.id}}">
 				    	</div>
-				    	<!-- <p class="address col-lg-6 col-md-6 col-sm-12">
+				    	{# <p class="address col-lg-6 col-md-6 col-sm-12">
 				    		<span class="label_descr">{{'address'|trans}}</span>
 				    		<textarea id="address-place-{{place.id}}" onblur="updatePlace({{place.id}})" placeholder="{{'address_placeholder'|trans}}">{{place.address}}</textarea>
-				    	</p>
-				    	<p class="remark col-lg-6 col-md-6 col-sm-12">
+				    	</p> #}
+				    	<p class="remark col-lg-12 col-md-12 col-sm-12">
 				    		<span class="label_descr">{{'remark'|trans}}</span>
 				    		<textarea id="remark-place-{{place.id}}" onblur="updatePlace({{place.id}})" placeholder="{{'remark_placeholder'|trans}}">{{place.remark}}</textarea>
-				    	</p> -->
+				    	</p> 
 				    </div>
 				</div>
 		</div>
