--- a/src/PlanIt/PlaceBundle/Resources/views/Page/index.html.twig
+++ b/src/PlanIt/PlaceBundle/Resources/views/Page/index.html.twig
@@ -45,6 +45,17 @@
 				</div>
 				<div class="accordion-body">
 				    <div class="labels row">
+				    	{# ADDRESS #}
+				    	<p class="address col-lg-6 col-md-6 col-sm-12">
+				    		<span class="label_descr">{{'address'|trans}}</span>
+				    		<textarea id="address-place-{{place.id}}" onblur="updatePlace({{place.id}})" placeholder="{{'address_placeholder'|trans}}">{{place.address}}</textarea>
+				    	</p> 
+				    	{# REMARK #}
+				    	<p class="remark col-lg-6 col-md-6 col-sm-12">
+				    		<span class="label_descr">{{'remark'|trans}}</span>
+				    		<textarea id="remark-place-{{place.id}}" onblur="updatePlace({{place.id}})" placeholder="{{'remark_placeholder'|trans}}">{{place.remark}}</textarea>
+				    	</p> 
+
 				    	<div class="col-lg-3 col-md-12 col-sm-12 img_place">
 				    		<div class="container-img-place">
 					    		{% if place.image != null %}
@@ -58,12 +69,15 @@
 				                </div>
 				        </div>
 				    	<div class="col-lg-4 col-md-6 col-sm-12" id="infos">
-				        	<p class="address"><span class="label_descr">{{'address'|trans}}</span> <textarea id="address-place-{{place.id}}" onblur="updatePlace({{place.id}})" placeholder="{{'address_placeholder'|trans}}">{{place.address}}</textarea></p>
+				        	{# CAPACITY #}
 				        	<p><span class="label_descr">{{'capacity'|trans}}</span> <input type="text" class="short_input" id="capacity-place-{{place.id}}" onblur="updatePlace({{place.id}})" value="{{place.capacity}}">personnes</p>
+				        	{# DISTANCE #}
 				        	<p><span class="label_descr">{{'distance'|trans}}</span> <input type="text" class="short_input" id="distance-place-{{place.id}}" onblur="updatePlace({{place.id}})" value="{{place.distance}}">km</p>
+				        	{# TEL #}
 				        	<p><span class="label_descr">{{'tel'|trans}}</span> <input type="text" id="tel-place-{{place.id}}" onblur="updatePlace({{place.id}})" value="{{place.tel}}" placeholder="ex: 06 78 56 43 44"></p>
-				        	<p><span class="label_descr">{{'website'|trans}}</span> <input type="text" id="website-place-{{place.id}}" onblur="updatePlace({{place.id}})" value="{{place.website}}" placeholder= "ex: www.placetobe.com"> </p>
-				        	{# <p><span class="label_descr">{{'remark'|trans}}</span><textarea id="remark-place-{{place.id}}" onblur="updatePlace({{place.id}})" placeholder="{{'remark_placeholder'|trans}}">{{place.remark}}</textarea></p> #}
+				        	{# WEBSITE #}
+				        	<p><span class="label_descr">{{'website'|trans}}</span> <input type="text" id="website-place-{{place.id}}" onblur="updatePlace({{place.id}})" value="{{place.website}}" placeholder= "ex:www.placetobe.com"> </p>
+				        	{# STATE #}
 				        	<p id="p-state-place-{{place.id}}" class="state-infos"><span class="label_descr">{{'state'|trans}}</span>
 				        		{% if place.state == 1 %}
 				        			<span class="accepted"> {{'accepted'|trans}} </span>
@@ -96,14 +110,6 @@
 				    	</div>
 				    	<div class="col-lg-5 col-md-6 col-sm-12 map_canvas" id="map_canvas_{{place.id}}">
 				    	</div>
-				    	{# <p class="address col-lg-6 col-md-6 col-sm-12">
-				    		<span class="label_descr">{{'address'|trans}}</span>
-				    		<textarea id="address-place-{{place.id}}" onblur="updatePlace({{place.id}})" placeholder="{{'address_placeholder'|trans}}">{{place.address}}</textarea>
-				    	</p> #}
-				    	<p class="remark col-lg-12 col-md-12 col-sm-12">
-				    		<span class="label_descr">{{'remark'|trans}}</span>
-				    		<textarea id="remark-place-{{place.id}}" onblur="updatePlace({{place.id}})" placeholder="{{'remark_placeholder'|trans}}">{{place.remark}}</textarea>
-				    	</p> 
 				    </div>
 				</div>
 		</div>
