--- a/src/PlanIt/PlaceBundle/Resources/views/Page/index.html.twig
+++ b/src/PlanIt/PlaceBundle/Resources/views/Page/index.html.twig
@@ -56,6 +56,8 @@
 				    		<textarea id="remark-place-{{place.id}}" onblur="updatePlace({{place.id}})" placeholder="{{'remark_placeholder'|trans}}">{{place.remark}}</textarea>
 				    	</p> 
 
+				    	<p class="separator col-lg-10 col-md-10 col-sm-10 col-lg-offset-1 col-md-offset-1 col-sm-offset-1"><p>
+
 				    	<div class="col-lg-3 col-md-12 col-sm-12 img_place">
 				    		<div class="container-img-place">
 					    		{% if place.image != null %}
@@ -69,15 +71,6 @@
 				                </div>
 				        </div>
 				    	<div class="col-lg-4 col-md-6 col-sm-12" id="infos">
-<<<<<<< HEAD
-				        	<p><span class="label_descr">{{'address'|trans}}</span> <input type="text" id="address-place-{{place.id}}" onblur="updatePlace({{place.id}})" value="{{place.address}}"></p>
-				        	<p><span class="label_descr">{{'capacity'|trans}}</span> <input type="text" class="short_input" id="capacity-place-{{place.id}}" onblur="updatePlace({{place.id}})" value="{{place.capacity}}"></p>
-				        	<p><span class="label_descr">{{'distance'|trans}}</span> <input type="text" class="short_input" id="distance-place-{{place.id}}" onblur="updatePlace({{place.id}})" value="{{place.distance}}">km</p>
-				        	<p><span class="label_descr">{{'tel'|trans}}</span> <input type="text" id="tel-place-{{place.id}}" onblur="updatePlace({{place.id}})" value="{{place.tel}}"></p>
-				        	<p><span class="label_descr">{{'website'|trans}}</span> <input type="text" id="website-place-{{place.id}}" onblur="updatePlace({{place.id}})" value="{{place.website}}"> </p>
-				        	<p><span class="label_descr">{{'remark'|trans}}</span> <input type="text" id="remark-place-{{place.id}}" onblur="updatePlace({{place.id}})" value="{{place.remark}}"> </p>
-				        	<p id="p-state-place-{{place.id}}"><span class="label_descr">{{'state'|trans}}</span>
-=======
 				        	{# CAPACITY #}
 				        	<p><span class="label_descr">{{'capacity'|trans}}</span> <input type="text" class="short_input" id="capacity-place-{{place.id}}" onblur="updatePlace({{place.id}})" value="{{place.capacity}}">personnes</p>
 				        	{# DISTANCE #}
@@ -85,10 +78,9 @@
 				        	{# TEL #}
 				        	<p><span class="label_descr">{{'tel'|trans}}</span> <input type="text" id="tel-place-{{place.id}}" onblur="updatePlace({{place.id}})" value="{{place.tel}}" placeholder="ex: 06 78 56 43 44"></p>
 				        	{# WEBSITE #}
-				        	<p><span class="label_descr">{{'website'|trans}}</span> <input type="text" id="website-place-{{place.id}}" onblur="updatePlace({{place.id}})" value="{{place.website}}" placeholder= "ex:www.placetobe.com"> </p>
+				        	<p><span class="label_descr">{{'website'|trans}}</span> <input type="text" id="website-place-{{place.id}}" onblur="updatePlace({{place.id}})" value="{{place.website}}" placeholder= "ex: www.placetobe.com"> </p>
 				        	{# STATE #}
 				        	<p id="p-state-place-{{place.id}}" class="state-infos"><span class="label_descr">{{'state'|trans}}</span>
->>>>>>> origin/master
 				        		{% if place.state == 1 %}
 				        			<span class="accepted"> {{'accepted'|trans}} </span>
 				        		{% else %}
@@ -120,17 +112,6 @@
 				    	</div>
 				    	<div class="col-lg-5 col-md-6 col-sm-12 map_canvas" id="map_canvas_{{place.id}}">
 				    	</div>
-<<<<<<< HEAD
-				    	<!-- <p class="address col-lg-6 col-md-6 col-sm-12">
-				    		<span class="label_descr">{{'address'|trans}}</span>
-				    		<textarea id="address-place-{{place.id}}" onblur="updatePlace({{place.id}})" placeholder="{{'address_placeholder'|trans}}">{{place.address}}</textarea>
-				    	</p>
-				    	<p class="remark col-lg-6 col-md-6 col-sm-12">
-				    		<span class="label_descr">{{'remark'|trans}}</span>
-				    		<textarea id="remark-place-{{place.id}}" onblur="updatePlace({{place.id}})" placeholder="{{'remark_placeholder'|trans}}">{{place.remark}}</textarea>
-				    	</p> -->
-=======
->>>>>>> origin/master
 				    </div>
 				</div>
 		</div>
